feat(domain): add domain project

--- a/src/PROJECT_NAME.Api/PROJECT_NAME.Api.csproj
+++ b/src/PROJECT_NAME.Api/PROJECT_NAME.Api.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PROJECT_NAME.Application\PROJECT_NAME.Application.csproj" />
+    <ProjectReference Include="..\PROJECT_NAME.Domain\PROJECT_NAME.Domain.csproj" />
     <ProjectReference Include="..\PROJECT_NAME.Infrastructure\PROJECT_NAME.Infrastructure.csproj" />
   </ItemGroup>
 
