--- a/src/PROJECT_NAME.Application/PROJECT_NAME.Application.csproj
+++ b/src/PROJECT_NAME.Application/PROJECT_NAME.Application.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PROJECT_NAME.Domain\PROJECT_NAME.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
