--- a/src/PROJECT_NAME.Infrastructure/PROJECT_NAME.Infrastructure.csproj
+++ b/src/PROJECT_NAME.Infrastructure/PROJECT_NAME.Infrastructure.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PROJECT_NAME.Application\PROJECT_NAME.Application.csproj" />
+    <ProjectReference Include="..\PROJECT_NAME.Domain\PROJECT_NAME.Domain.csproj" />
   </ItemGroup>
 
 </Project>
